--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Rugaciuni</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body style="background-color: #81DAF5">
 <div style="font-size: 26px; font-weight: bold">Rugaciune pentru parintele duhovnic</div>
