--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>Rugaciuni</title>
+<title>Rugăciuni pentru părintele duhovnic</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body style="background-color: #81DAF5">
 <div style="font-size: 20px; font-weight: bold">"Dumnezeu dragoste este"</div>
-<div style="font-size: 20px; font-weight: italic">Fie ca Atotmilostivul Dumnezeu, pentru rugăciunile părintelui nostru duhovnic să ne ajute Să-l cunoaștem și Să-l urmăm!</div>
+<div style="font-size: 20px; font-weight: italic">Fie ca Atotmilostivul Dumnezeu, pentru rugăciunile părintelui nostru duhovnic să ne ajute Să-L cunoaștem și Să-L urmăm!</div>
 
 <br><br>
 <div style="font-size: 26px; font-weight: bold">Rugăciune pentru părintele duhovnic</div>
